--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-native-size-matters": "0.4.0",
     "react-native-web": "0.13.16",
     "react-scripts": "3.4.1",
     "react-three-fiber": "5.3.10",
